--- a/libtoolize.in
+++ b/libtoolize.in
@@ -1,7 +1,8 @@
 #! /bin/sh
 # libtoolize - Prepare a package to use libtool.
 # @configure_input@
-# Copyright (C) 1996-2000, 2001 Free Software Foundation, Inc.
+# Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001, 2003
+# Free Software Foundation, Inc.
 # Originally by Gordon Matzigkeit <gord@gnu.ai.mit.edu>, 1996
 #
 # This program is free software; you can redistribute it and/or modify
@@ -77,6 +78,8 @@ Prepare a package to use libtool.
 
 You must \`cd' to the top directory of your package before you run
 \`$progname'.
+
+Report bugs to <bug-libtool@gnu.org>.
 EOF
     exit 0
     ;;
@@ -84,7 +87,7 @@ EOF
   --version)
     echo "$PROGRAM (GNU $PACKAGE) $VERSION"
     echo
-    echo "Copyright 1996-2000, 2001 Free Software Foundation, Inc."
+    echo "Copyright (C) 2003 Free Software Foundation, Inc."
     echo "This is free software; see the source for copying conditions.  There is NO"
     echo "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE."
     exit 0
