* libtool.m4 (darwin): Revamp darwin platform support. * ltdl.m4 (darwin): Support dlcompat if found. * ltmain.in: Make sure ranlib is run if needed when piecewise linking.

--- a/ltmain.in
+++ b/ltmain.in
@@ -2489,6 +2489,7 @@ EOF
 	  if test "$link_all_deplibs" != no; then
 	    # Add the search paths of all dependency libraries
 	    for deplib in $dependency_libs; do
+	      depdepl=
 	      case $deplib in
 	      -L*) path="$deplib" ;;
 	      *.la)
@@ -2506,7 +2507,7 @@ EOF
 		  ;;
 		esac
 		if grep "^installed=no" $deplib > /dev/null; then
-		  path="-L$absdir/$objdir"
+		  path="$absdir/$objdir"
 		else
 		  eval libdir=`${SED} -n -e 's/^libdir=\(.*\)$/\1/p' $deplib`
 		  if test -z "$libdir"; then
@@ -2516,11 +2517,32 @@ EOF
 		  if test "$absdir" != "$libdir"; then
 		    $echo "$modename: warning: \`$deplib' seems to be moved" 1>&2
 		  fi
-		  path="-L$absdir"
+		  path="$absdir"
 		fi
+		depdepl=
+		case $host in
+		*-*-darwin*)
+		  depdepl=`$echo "X$deplib" | ${SED} -e 's,.*/,,' -e 's,^lib,,' -e 's,\.la$,,'`
+		  depdepl="-l$depdepl"
+		  newlib_search_path="$newlib_search_path $path"
+		  ;;
+		esac 
+		path="-L$path"
+		;;
+		  -l*)
+		case $host in
+		*-*-darwin*)
+           depdepl=$deplib
+		  ;;
+		*) continue ;;
+		esac  		  
 		;;
 	      *) continue ;;
 	      esac
+	      case " $deplibs " in
+	      *" $depdepl "*) ;;
+	      *) deplibs="$deplibs $depdepl" ;;
+	      esac	      
 	      case " $deplibs " in
 	      *" $path "*) ;;
 	      *) deplibs="$deplibs $path" ;;
@@ -3902,8 +3924,10 @@ EOF
       case $host in
       *darwin*)
         # Don't allow lazy linking, it breaks C++ global constructors
+        if test "$tagname" = CXX ; then
         compile_command="$compile_command ${wl}-bind_at_load"
         finalize_command="$finalize_command ${wl}-bind_at_load"
+        fi
         ;;
       esac
 
@@ -4856,6 +4880,11 @@ fi\
 	    $echo "$modename: warning: to ensure that POSIX-compatible ar will work" 1>&2
 	    AR_FLAGS=cq
 	  fi
+	  # Is there a better way of finding the last object in the list?
+	  for obj in $save_oldobjs
+	  do
+	    last_oldobj=$obj
+	  done  
 	  for obj in $save_oldobjs
 	  do
 	    oldobjs="$objlist $obj"
@@ -4867,6 +4896,9 @@ fi\
 	    else
 	      # the above command should be used before it gets too long
 	      oldobjs=$objlist
+	      if test "$obj" = "$last_oldobj" ; then
+	        RANLIB=$save_RANLIB
+	      fi  
 	      test -z "$concat_cmds" || concat_cmds=$concat_cmds~
 	      eval concat_cmds=\"\${concat_cmds}$old_archive_cmds\"
 	      objlist=
