* libltdl/configure.ac: Use AC_CONFIG_AUX_DIR([.]) to place auxilary files in the libltdl directory. * Makefile.am: Add to the ltmain.sh rule to copy it into the libltdl subdirectory. * bootstrap: Explicitly handle ltmain.sh in libltdl, and pass --copy to automake.

--- a/Makefile.am
+++ b/Makefile.am
@@ -45,6 +45,7 @@ $(srcdir)/ltmain.sh: $(srcdir)/ltmain.in $(TSDEPS)
 	    -e "s%@""TIMESTAMP@%$$date%" $(srcdir)/ltmain.in > ltmain.shT
 	mv -f ltmain.shT $@ || \
 	(rm -f $@ && cp ltmain.shT $@ && rm -f ltmain.shT)
+	cp $@ $(srcdir)/libltdl/
 
 # TSDEPS will be defined to TSDEPS_DIST at `make dist' time
 TSDEPS =
