--- a/ltmain.in
+++ b/ltmain.in
@@ -5410,7 +5410,7 @@ relink_command=\"$relink_command\""
 	  # To insure that "foo" is sourced, and not "foo.exe",
 	  # finese the cygwin/MSYS system by explicitly sourcing "foo."
 	  # which disallows the automatic-append-.exe behavior.
-	  case $host in
+	  case $build in
 	  *cygwin* | *mingw*) wrapperdot=${wrapper}. ;;
 	  *) wrapperdot=${wrapper} ;;
 	  esac
@@ -5448,7 +5448,7 @@ relink_command=\"$relink_command\""
 	  # To insure that "foo" is sourced, and not "foo.exe",
 	  # finese the cygwin/MSYS system by explicitly sourcing "foo."
 	  # which disallows the automatic-append-.exe behavior.
-	  case $host in
+	  case $build in
 	  *cygwin* | *mingw*) wrapperdot=${wrapper}. ;;
 	  *) wrapperdot=${wrapper} ;;
 	  esac
