* ltmain.in (win32_libid): use $SED, not head.

--- a/ltmain.in
+++ b/ltmain.in
@@ -129,7 +129,7 @@ win32_libid () {
     win32_libid_type="x86 archive import"
     ;;
   *ar\ archive*) # could be an import, or static
-    if eval $OBJDUMP -f $1 | head -n 10 2>/dev/null | \
+    if eval $OBJDUMP -f $1 | $SED -e '10q' 2>/dev/null | \
       grep -E 'file format pe-i386(.*architecture: i386)?' >/dev/null ; then
       win32_nmres=`eval $NM -f posix -A $1 | \
         sed -n -e '1,100{/ I /{x;/import/!{s/^/import/;h;p;};x;}}'`
