* libtool.m4 (_LT_AC_TAGCONFIG): Add test around the macro that adds tags to the libtool script so that they won't run when not needed. * configure.ac: Set F77 to no when no Fortran compiler is found.

--- a/configure.ac
+++ b/configure.ac
@@ -110,6 +110,9 @@ AM_CONDITIONAL(HAVE_CXX, [test "x$CXX" != xno])
 pushdef([AC_MSG_ERROR], [F77=no])
 AC_PROG_F77
 popdef([AC_MSG_ERROR])
+if test -z "$F77"; then
+  F77="no"
+fi
 AM_CONDITIONAL(HAVE_F77, [test "x$F77" != xno])
 
 LT_AC_PROG_GCJ
