--- a/configure.ac
+++ b/configure.ac
@@ -53,7 +53,7 @@ AC_SUBST([TIMESTAMP])
 ## Automake Initialisation. ##
 ## ------------------------ ##
 AM_INIT_AUTOMAKE(AC_PACKAGE_TARNAME, AC_PACKAGE_VERSION)
-
+AM_CONFIG_HEADER([config.h:config-h.in])
 
 
 ## ------------------------------- ##
