--- a/f77demo/configure.ac
+++ b/f77demo/configure.ac
@@ -28,6 +28,7 @@ AC_CONFIG_SRCDIR([foof.f])dnl
 ## Automake Initialisation. ##
 ## ------------------------ ##
 AM_INIT_AUTOMAKE(AC_PACKAGE_TARNAME, AC_PACKAGE_VERSION)
+AM_CONFIG_HEADER([config.h:config-h.in])
 
 
 ## ------------------ ##
