* mdemo2/configure.ac: Use AC_LIBTOOL_DLOPEN. * mdemo2/main.c: Use LTDL_SET_PRELOADED_SYMBOLS(). * mdemo2/Makefile.am: Set INCLUDES properly and add -dlopen force to make sure the symbols file is included in the link line.

--- a/mdemo2/Makefile.am
+++ b/mdemo2/Makefile.am
@@ -2,7 +2,7 @@
 
 AUTOMAKE_OPTIONS = no-dependencies foreign
 
-INCLUDES = $(INCLTDL)
+INCLUDES = -I../libltdl
 
 EXTRA_DIST = acinclude.m4
 
@@ -10,7 +10,7 @@ bin_PROGRAMS = mdemo2 mdemo2_static
 
 # Create a version of mdemo2 that links a library that does dlopen.
 mdemo2_SOURCES = main.c
-mdemo2_LDFLAGS = -export-dynamic
+mdemo2_LDFLAGS = -export-dynamic "-dlopen" force
 mdemo2_LDADD = ../mdemo/libmlib.la
 
 # Create a statically linked version of mdemo.
