* libtool.m4: allow STRIP to contain spaces and additional arguments.  (Debian Bug #183055) * ltmain.in: include newline in "sensible default" for IFS. (Debian Bug #98492 and #95447)

--- a/ltmain.in
+++ b/ltmain.in
@@ -94,7 +94,8 @@ if test "${LANG+set}" = set; then
 fi
 
 # Make sure IFS has a sensible default
-: ${IFS=" 	"}
+: ${IFS=" 	
+"}
 
 if test "$build_libtool_libs" != yes && test "$build_old_libs" != yes; then
   $echo "$modename: not configured to build any kind of library" 1>&2
