--- a/f77demo/.cvsignore
+++ b/f77demo/.cvsignore
@@ -4,16 +4,14 @@ Makefile
 Makefile.in
 acinclude.m4
 aclocal.m4
+autom4te.cache
 configure
 config.*
+config-h.in
 conftest*
-hc-direct
-hc-libflag
-hc-libpath
-hc-minusL
 libtool
 *.lo
 *.la
-hell
-hell.static
-helldl
+stamp-h*
+cprogram
+fprogram
